# sudoku

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.sh  tox.ini
.tox/py311-test/: .tox-info.json
.tox/py38-test/: .tox-info.json
.tox/py39-test/: .tox-info.json
puzzles/: puzzle.json  puzzle1.json
src/sudoku/: __init__.py  board.py  button.py  cell.py  constants.py  game_sprites.py  groups.py  main.py  schema.json  screen_manager.py
src/sudoku.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sudoku/puzzles/: puzzle.json
src/sudoku/screens/: __init__.py  builder_screen.py  home_screen.py  load_screen.py  play_screen.py  screen.py  solver_screen.py
